<resources>
    <string name="app_name">AppArchitecture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_btn_submit">Submit</string>
    <string name="form_username">Username</string>
    <string name="form_password">Password</string>
    <string name="add">Add</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task description(Optional)</string>
    <string name="is_important_task">Is important task?</string>
    <!--    <string name="web_client_id">285195062752-q6eib088g2086drgkgghi1kkbr63uu5d.apps.googleusercontent.com</string>-->
    <string name="web_client_id">285195062752-onhe5f5r9ruba5of1c1iet3585mgkhd5.apps.googleusercontent.com</string>
    <string name="form_phone_number">Phone no</string>
    <string name="form_name">Name</string>
    <string name="search">Search</string>
    <string name="loading_message">Please wait until finish loading.</string>
    <string name="no_internet">No internet connection</string>
    <string name="something_wrong">Something went wrong. Please try again later.</string>
    <string name="logout">Logout</string>
</resources>