<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_10sdp"
    tools:context=".ui.add_edit_todo.AddEditTodoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_title"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/tl_task_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_task_desc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:gravity="top|start"
                android:hint="@string/task_description"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_task_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_important_task"
            app:layout_constraintTop_toBottomOf="@id/tl_task_description"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:contentDescription="@string/add"
        android:src="@drawable/ic_check"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>